cargo-features = ["per-package-target"]
[package]
name = "covert_client"
forced-target = "x86_64-pc-windows-gnu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.windows]
version = "0.38.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]