cargo-features = ["per-package-target"]

[package]
name = "covert_client"
version = "0.1.2"
authors = ["Matthew Howard <matthew@hattmo.com>"]
edition = "2021"
description = "Helper library for creating external C2 clients for Cobalt Strike"
homepage = "https://github.com/hattmo/covert_c2"
repository = "https://github.com/hattmo/covert_c2"
license = "GPL-3.0-or-later"
keywords = ["security","cobaltstrike"]
default-target = "x86_64-pc-windows-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.38.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]