[package]
authors = ["Matthew Howard <matthew@hattmo.com>"]
description = "Helper library for creating covert tunnels on an unreliable channel"
edition = "2021"
homepage = "https://github.com/hattmo/covert_c2"
keywords = ["security", "cobaltstrike"]
license = "GPL-3.0-or-later"
name = "covert_common"
repository = "https://github.com/hattmo/covert_c2"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode_aes = "1.0.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.138"

[dev-dependencies]
rand = "0.8.5"
