[package]
authors = ["Matthew Howard <matthew@hattmo.com>"]
description = "Helper library for creating covert tunnels on an unreliable channel"
edition = "2021"
homepage = "https://github.com/hattmo/covert_c2"
keywords = ["security", "cobaltstrike"]
license = "GPL-3.0-or-later"
name = "covert_common"
repository = "https://github.com/hattmo/covert_c2"
version = "0.1.0"

[dependencies]
aes = {version = "0.8"}
anyhow = "1.0"
bincode = "1.3"
cipher = {version = "0.4.3", features = ["block-padding", "alloc"]}
rand = "0.8"
serde = {version = "1.0.138", features = ["derive"]}
