[package]
name = "covert_server"
version = "0.1.2"
authors = ["Matthew Howard <matthew@hattmo.com>"]
edition = "2021"
description = "Helper library for creating external C2 servers for Cobalt Strike"
homepage = "https://github.com/hattmo/covert_c2"
repository = "https://github.com/hattmo/covert_c2"
license = "GPL-3.0-or-later"
keywords = ["security","cobaltstrike"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.56"
clap = {version = "3.2.6", features= ["derive"]}