[package]
name = "covert_server"
version = "0.1.2"
authors = ["Matthew Howard <matthew@hattmo.com>"]
edition = "2021"
description = "Helper library for creating external C2 servers for Cobalt Strike"
homepage = "https://github.com/hattmo/covert_c2"
repository = "https://github.com/hattmo/covert_c2"
license = "GPL-3.0-or-later"
keywords = ["security","cobaltstrike"]

[dependencies]
tokio = { version = "1.19", features = ["full"] }
async-trait = "0.1.56"
anyhow = "1.0"

[dev-dependencies]
clap = {version = "3.2", features= ["derive"]}